lab1/Test/L1-A-10-77.output
Error Type A at Line 6
Error Type A at Line 10
Error Type B at Line 18
Error Type B at Line 21
Error Type A at Line 27
Error Type B at Line 31
Error Type B at Line 38
Error Type B at Line 38
