lab1/Test/L1-A-10-77.cmm
int g6G ( struct {
  float KT , XBK = Ta || HV8f0wwTtUI6nDClvFS && Xkad9yKjamr 
    != Xn3t / VP4S1xCH ( DGbhboQTNfZtF4X , dSitUsf = t8EVpJLGYNNsFuRaNy 
    = CJ == FmDTmcCLQE6H165yB + ! - gN2vCT7 [ PuGwaiTLTtZI0W 
    > qz - svcb * ( dnuBnDjjKKljFqdSv6lD && rZ77M < neX9vnZN6BsMTG 
    + MUGfXIgGrZ [ lESN = bIFtpY >= rSZ7J %] + T2AXpGsXpFu8vCCIOPPv 
    <= ! PiRqEm9RR44v_ [ ! 1749332738.38449730 . HOJqOcNi5cvB 
    - 33327225 / m44u . KRYzoSGn ] / W ( ) . EwT9M ) ] 
    ) ;
%}uVem [ 241596467 ] , int _OyLBp6 ) {
}
struct KWLNY9 ;
struct {
  int i1gM5lsv ;
  struct R2U6Oaa186a2cASp_ {
  }dCN44PafGzDgACb7ZUJ ;
}h0eHPLxWnu , cW8JAkEqo 
s0EKLpq 
;
int ;
int . ;
int ;
int ReGjsmUmi ( ) {
  bCYa5jhSTUFtqSteE ;
  y4BJC3b1dKXluKi1G4x ;
  ELGPkXFPOxr ;
  if ( :FLUT95OF )   while ( GwzyYV )   if ( DL ) 
      Ilbi0rJXRnZfgL ;
else {
    return BUvjJj ;
  }&& 

else   if ( w7zyalpI9_ )   DqY6LqfDmBCNwu ;


}
int ;
int = 